...
    <string name="audio_quality_low">Low (Data Saver)</string>
    <string name="audio_quality_description_format">%1$d kbps, %2$s, Processing: %3$s</string>
    <string name="stereo">Stereo</string>
    <string name="mono">Mono</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="no_internet">No internet connection</string>
    <string name="unstable_internet">Unstable internet connection</string>
    <string name="ringtone">Ringtone</string>
    <string name="select_ringtone">Select Ringtone</string>
    <string name="default_ringtone">Default</string>
    <string name="unknown_ringtone">Unknown</string>
</resources>
...
