appId: com.github.biltudas1.sequence
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    notVisible: "No internet connection"
    timeout: 60000
- extendedWaitUntil:
    visible: "Sign in with Google"
    timeout: 30000
- tapOn: "Sign in with Google"
- assertVisible: "Please configure server settings first"
- tapOn: "Login using Email"
- assertVisible: "Please configure server settings first"
- tapOn: "Server Configuration"
- tapOn: "Server Endpoint"
- inputText: "http://127.0.0.1:8888"
- hideKeyboard
- tapOn:
    childOf:
      id: "row_https"
    index: 1
- tapOn:
    childOf:
      id: "row_wss"
    index: 1
- tapOn: "Test Connection"
- assertVisible: (?i)server.+compatible?.+
- tapOn: "Save"
